fixed full screen entering and leaving to not break the slides

--- a/src/css/prezzideo.css
+++ b/src/css/prezzideo.css
@@ -186,5 +186,5 @@
 	background:red;
 	height:5px;
 	width:5px;
-	pointer-events: none;
+	/* pointer-events: none; */
 }
